[package]
name = "citadel"
description = "Bitcoin, LN & RGB wallet runtime"
version = "0.1.0-beta"
license = "MIT"
authors = ["Dr. Maxim Orlovsky <orlovsky@mycitadel.io>"]
keywords = ["bitcoin", "rgb", "wallet", "lightning"]
edition = "2018"
readme = "README.md"
exclude = [".github"]

[lib]
name = "citadel"

[dependencies]
# LNP/BP crates
amplify = { version = "3", features = ["serde"] }
amplify_derive = "2.4.4"
slip132 = { version = "0.3.2", features = ["serde"] }
strict_encoding = { version = "1.0.7", features = ["chrono", "crypto", "miniscript", "derive"] }
descriptor-wallet = { version = "0.4", features = ["serde"] }
lnpbp = { version = "0.4", features = ["serde"] }
lnpbp_invoice = { git = "https://github.com/LNP-BP/rust-lnpbp", features = ["serde", "rgb"] }
lnp-core = { git = "https://github.com/LNP-BP/lnp-core", features = ["serde"] }
rgb-core = { version = "0.4.2", features = ["serde"] }
rgb20 = { version = "0.4", features = ["serde"] }
# rgb21 = { version = "0.3.0-beta.3", optional = true }
# rgb22 = { version = "0.3.0-beta.3", optional = true }
# rgb23 = { version = "0.3.0-beta.3", optional = true }
rgb_node = { git = "https://github.com/rgb-org/rgb-node", default-features = false, features = ["fungibles", "serde"] }
internet2 = { git = "https://github.com/internet2-org/rust-internet2", features = ["serde", "url", "zmq"] }
microservices = { git = "https://github.com/internet2-org/rust-internet2", default-features = false, features = ["serde", "node"] }
# Bitcoin
bitcoin = { version = "0.26", features = ["use-serde"] }
miniscript = { version = "5", features = ["use-serde"] }
electrum-client = { version = "0.6", optional = true }
# Rust language
lazy_static = "1.4"
chrono = { version = "0.4", features = ["serde"] }
# Serialization & parsing
serde = { version = "1", features = ["derive"] }
serde_with = { version = "1.5", features = ["hex", "chrono"] }
serde_json = "1"
serde_yaml = "0.8"
toml = "0.5"
bech32 = "0.7"
base64 = "0.12"
# Congig & logging
log = { version = "0.4", features = ["max_level_trace", "release_max_level_debug"] }
env_logger = "0.7"
clap = { version = "3.0.0-beta.2", optional = true }
dotenv = { version = "0.15", optional = true }
colored = { version = "2", optional = true }
shellexpand = { version = "2", optional = true }

[features]
default = ["client", "runtime"]
all = ["tor", "sql", "nosql", "vendored_openssl"]

runtime = ["internet2/keygen", "rgb_node/server", "bitcoin/rand", "electrum-client"]
client = ["microservices/client", "rgb_node/server", "bitcoin/rand"]

tor = ["microservices/tor", "internet2/tor", "rgb_node/tor"]
sql = ["rgb_node/diesel"]
nosql = ["rgb_node/hammersbald"]
vendored_openssl = ["microservices/vendored_openssl", "internet2/vendored_openssl", "rgb_node/vendored_openssl"]
