[package]
name = "citadel-runtime"
description = "Bitcoin, LN & RGB wallet runtime"
version = "0.1.0"
license = "MIT"
authors = ["Dr. Maxim Orlovsky <orlovsky@mycitadel.io>"]
keywords = ["bitcoin", "rgb", "wallet", "lightning"]
edition = "2018"
readme = "README.md"
exclude = [".github"]

[lib]
name = "citadel"

[dependencies]
# LNP/BP crates
amplify = { version = "3", features = ["serde"] }
amplify_derive = "2.4.4"
slip132 = { version = "0.3.2", features = ["serde"] }
strict_encoding = { version = "1.0.7", features = ["chrono", "crypto", "miniscript", "derive"] }
descriptor-wallet = { version = "0.4", features = ["serde"] }
lnpbp = { version = "0.4", features = ["serde"] }
lnpbp-invoice = { version = "0.1", features = ["serde", "rgb"] }
lnp-core = { version = "0.3.1", features = ["serde"] }
rgb-core = { version = "0.4.3", features = ["serde"] }
rgb20 = { version = "0.4", features = ["serde"] }
# rgb21 = { version = "0.3.0-beta.3", optional = true }
# rgb22 = { version = "0.3.0-beta.3", optional = true }
# rgb23 = { version = "0.3.0-beta.3", optional = true }
rgb_node = { version = ">=0.4.1", optional = true, default-features = false, features = ["fungibles", "serde", "server", "electrum-client"] }
internet2 = { version = "0.3.10", features = ["serde", "url", "zmq"] }
microservices = { version = "0.3.10", default-features = false, features = ["serde", "node"] }
# Bitcoin
bitcoin = { version = "0.26", features = ["use-serde"] }
miniscript = { version = "5", features = ["use-serde"] }
electrum-client = { version = "0.6", optional = true }
# Rust language
lazy_static = "1.4"
chrono = { version = "0.4", features = ["serde"] }
# Serialization & parsing
serde = { version = "1", features = ["derive"] }
serde_with = { version = "1.5", features = ["hex", "chrono"] }
serde_json = "1"
serde_yaml = "0.8"
toml = "0.5"
bech32 = "0.7"
base64 = "0.12"
# Congig & logging
log = { version = "0.4", features = ["max_level_trace", "release_max_level_debug"] }
env_logger = "0.7"
shellexpand = "2.1"

[features]
default = ["client", "runtime"]
all = ["tor", "assets_sql", "stash_nosql", "vendored_openssl", "client", "runtime"]

runtime = ["internet2/keygen", "bitcoin/rand", "electrum-client", "rgb_node"]
client = ["microservices/client"]

tor = ["microservices/tor", "internet2/tor", "rgb_node/tor"]
assets_sql = ["rgb_node/diesel"]
stash_nosql = ["rgb_node/hammersbald"]
vendored_openssl = ["microservices/vendored_openssl", "internet2/vendored_openssl", "rgb_node/vendored_openssl"]
